force-app/main/default/objects/Trip_Visit_Report__c/Trip_Visit_Report__c.object-meta.xml
<CustomObject>
    <label>Trip/Visit Report</label>
    <nameField>
        <displayFormat>00-{00000}</displayFormat>
        <label>Trip/Visit Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trip/Visit Reports</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>