force-app/main/default/objects/Trip_Visit_Report__c/fields/actualOrImplied__c.field-meta.xml
<CustomField>
    <fullName>actualOrImplied__c</fullName>
    <label>Actual or Implied</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Actual</fullName>
            </value>
            <value>
                <fullName>Implied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>