force-app/main/default/objects/Trip_Visit_Report__c/fields/additionalReportRecipients__c.field-meta.xml
<CustomField>
    <fullName>additionalReportRecipients__c</fullName>
    <inlineHelpText>Comma-separated list of email addresses.</inlineHelpText>
    <label>Additional Report Recipients</label>
    <length>255</length>
    <type>Text</type>
</CustomField>