force-app/main/default/objects/Trip_Visit_Report__c/fields/businessUnit__c.field-meta.xml
<CustomField>
    <fullName>businessUnit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GG</fullName>
            </value>
            <value>
                <fullName>CAG</fullName>
            </value>
            <value>
                <fullName>EIG</fullName>
            </value>
            <value>
                <fullName>AGI</fullName>
                <isActive>false</isActive>
                <label>AGI</label>
            </value>
            <value>
                <fullName>CDT</fullName>
                <isActive>false</isActive>
                <label>CDT</label>
            </value>
            <value>
                <fullName>CGT</fullName>
                <isActive>false</isActive>
                <label>CGT</label>
            </value>
            <value>
                <fullName>CPM</fullName>
                <isActive>false</isActive>
                <label>CPM</label>
            </value>
            <value>
                <fullName>CSM</fullName>
                <isActive>false</isActive>
                <label>CSM</label>
            </value>
            <value>
                <fullName>HPD</fullName>
                <isActive>false</isActive>
                <label>HPD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>