force-app/main/default/objects/Trip_Visit_Report__c/fields/caa__c.field-meta.xml
<CustomField>
    <fullName>caa__c</fullName>
    <formula>Account__r.caaActive__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CAA</label>
    <type>Checkbox</type>
</CustomField>