force-app/main/default/objects/Trip_Visit_Report__c/fields/cfa__c.field-meta.xml
<CustomField>
    <fullName>cfa__c</fullName>
    <formula>Account__r.cfaActive__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CFA</label>
    <type>Checkbox</type>
</CustomField>