force-app/main/default/objects/Trip_Visit_Report__c/fields/challengesCorningShouldAddress__c.field-meta.xml
<CustomField>
    <fullName>challengesCorningShouldAddress__c</fullName>
    <label>Challenges Corning Should Address</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>