force-app/main/default/objects/Trip_Visit_Report__c/fields/comments__c.field-meta.xml
<CustomField>
    <fullName>comments__c</fullName>
    <label>Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>