force-app/main/default/objects/Trip_Visit_Report__c/fields/company__c.field-meta.xml
<CustomField>
    <fullName>company__c</fullName>
    <label>Company</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>customerGroup__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD 1</fullName>
            </value>
            <value>
                <fullName>TBD 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>