force-app/main/default/objects/Trip_Visit_Report__c/fields/Competative_Information_Shared__c.field-meta.xml
<CustomField>
    <fullName>Competative_Information_Shared__c</fullName>
    <label>Competitive Information Received</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>