force-app/main/default/objects/Trip_Visit_Report__c/fields/competitor1__c.field-meta.xml
<CustomField>
    <fullName>competitor1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competitor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Trip/Visit Reports (Competitor 1)</relationshipLabel>
    <relationshipName>Trip_Visit_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>