force-app/main/default/objects/Trip_Visit_Report__c/fields/competitor__c.field-meta.xml
<CustomField>
    <fullName>competitor__c</fullName>
    <label>Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Competitor</valueSetName>
    </valueSet>
</CustomField>