force-app/main/default/objects/Trip_Visit_Report__c/fields/comptetitor2__c.field-meta.xml
<CustomField>
    <fullName>comptetitor2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Comptetitor 2</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Trip/Visit Reports (Comptetitor 2)</relationshipLabel>
    <relationshipName>Trip_Visit_Reports1</relationshipName>
    <type>Lookup</type>
</CustomField>