force-app/main/default/objects/Trip_Visit_Report__c/fields/Confidential_Information_Shared__c.field-meta.xml
<CustomField>
    <fullName>Confidential_Information_Shared__c</fullName>
    <label>Confidential Information Received</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>