force-app/main/default/objects/Trip_Visit_Report__c/fields/contractStatus__c.field-meta.xml
<CustomField>
    <fullName>contractStatus__c</fullName>
    <label>Contract Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>n/a</fullName>
            </value>
            <value>
                <fullName>CAA</fullName>
            </value>
            <value>
                <fullName>Non-CAA</fullName>
            </value>
            <value>
                <fullName>Innovation-Clause</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>