force-app/main/default/objects/Trip_Visit_Report__c/fields/corningSource__c.field-meta.xml
<CustomField>
    <fullName>corningSource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Corning Source</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Trip_Visit_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>