force-app/main/default/objects/Trip_Visit_Report__c/fields/customerAttendeesAndTitles__c.field-meta.xml
<CustomField>
    <fullName>customerAttendeesAndTitles__c</fullName>
    <label>Customer Attendees and Titles</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>