force-app/main/default/objects/Trip_Visit_Report__c/fields/customerGroup__c.field-meta.xml
<CustomField>
    <fullName>customerGroup__c</fullName>
    <label>Customer Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AGbC Screen Protectors Standard Accounts(8)</fullName>
            </value>
            <value>
                <fullName>AGI Blue(1)</fullName>
            </value>
            <value>
                <fullName>AGI Standard Accounts(31)</fullName>
            </value>
            <value>
                <fullName>CDTC Standard Accounts(18)</fullName>
            </value>
            <value>
                <fullName>CDTT Standard Accounts(8)</fullName>
            </value>
            <value>
                <fullName>CGT SHARED ACCOUNTS(51)</fullName>
            </value>
            <value>
                <fullName>CJKK Standard Accounts(14)</fullName>
            </value>
            <value>
                <fullName>CPM Standard Accounts(9)</fullName>
            </value>
            <value>
                <fullName>GG Blue(1)</fullName>
            </value>
            <value>
                <fullName>GG Google X(1)</fullName>
            </value>
            <value>
                <fullName>GG Microsoft(1)</fullName>
            </value>
            <value>
                <fullName>GG Samsung Private(1)</fullName>
            </value>
            <value>
                <fullName>GG Standard Accounts(339)</fullName>
            </value>
            <value>
                <fullName>New Customer Group(1)</fullName>
            </value>
            <value>
                <fullName>SGP Blue(1)</fullName>
            </value>
            <value>
                <fullName>SGP Standard Accounts(57)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>