force-app/main/default/objects/Trip_Visit_Report__c/fields/Date_of_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Meeting__c</fullName>
    <label>Date of Meeting</label>
    <type>Date</type>
</CustomField>