force-app/main/default/objects/Trip_Visit_Report__c/fields/Distribution_Group_Names__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Group_Names__c</fullName>
    <label>Distribution Group</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GG Standard Accounts</fullName>
            </value>
            <value>
                <fullName>AGbC Screen Protectors Standard Accounts</fullName>
            </value>
            <value>
                <fullName>GG Microsoft</fullName>
            </value>
            <value>
                <fullName>GG Blue</fullName>
            </value>
            <value>
                <fullName>GG MKT/ Competitor Intel</fullName>
            </value>
            <value>
                <fullName>GG Branding/ Trademark</fullName>
            </value>
            <value>
                <fullName>AGS Interior</fullName>
            </value>
            <value>
                <fullName>AGS Exterior</fullName>
            </value>
            <value>
                <fullName>CAG Glazing</fullName>
                <isActive>false</isActive>
                <label>CAG Glazing</label>
            </value>
            <value>
                <fullName>CAGInterior</fullName>
                <isActive>false</isActive>
                <label>CAGInterior</label>
            </value>
            <value>
                <fullName>GG China value chain</fullName>
                <isActive>false</isActive>
                <label>GG China value chain</label>
            </value>
            <value>
                <fullName>GG FIN</fullName>
                <isActive>false</isActive>
                <label>GG FIN</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>