force-app/main/default/objects/Trip_Visit_Report__c/fields/executiveSummary__c.field-meta.xml
<CustomField>
    <fullName>executiveSummary__c</fullName>
    <label>Executive Summary</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>