force-app/main/default/objects/Trip_Visit_Report__c/fields/fit__c.field-meta.xml
<CustomField>
    <fullName>fit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FIT</label>
    <type>Checkbox</type>
</CustomField>