force-app/main/default/objects/Trip_Visit_Report__c/fields/followUpActions__c.field-meta.xml
<CustomField>
    <fullName>followUpActions__c</fullName>
    <label>Follow-up Actions</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>