force-app/main/default/objects/Trip_Visit_Report__c/fields/glassUSPer_Sqft__c.field-meta.xml
<CustomField>
    <fullName>glassUSPer_Sqft__c</fullName>
    <label>Glass US$ per sqft</label>
    <length>255</length>
    <type>Text</type>
</CustomField>