force-app/main/default/objects/Trip_Visit_Report__c/fields/ignoreStandardDistribution__c.field-meta.xml
<CustomField>
    <fullName>ignoreStandardDistribution__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this box means that Trip Report will not be sent to the Distribution Group for this Account.</description>
    <inlineHelpText>Checking this box means that Trip Report will not be sent to the Distribution Group for this Account.</inlineHelpText>
    <label>Ignore Standard Distribution</label>
    <type>Checkbox</type>
</CustomField>