force-app/main/default/objects/Trip_Visit_Report__c/fields/innovationTechVisit__c.field-meta.xml
<CustomField>
    <fullName>innovationTechVisit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Innovation Tech Visit</label>
    <type>Checkbox</type>
</CustomField>