force-app/main/default/objects/Trip_Visit_Report__c/fields/intelCollected__c.field-meta.xml
<CustomField>
    <fullName>intelCollected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intel Collected</label>
    <type>Checkbox</type>
</CustomField>