force-app/main/default/objects/Trip_Visit_Report__c/fields/Key_Highlights__c.field-meta.xml
<CustomField>
    <fullName>Key_Highlights__c</fullName>
    <label>Key Highlights</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>