force-app/main/default/objects/Trip_Visit_Report__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <formula>Account__r.Name &amp;&apos; @ &apos;&amp;Location_Event__c</formula>
    <label>Location</label>
    <type>Text</type>
</CustomField>