force-app/main/default/objects/Trip_Visit_Report__c/fields/Location_Event__c.field-meta.xml
<CustomField>
    <fullName>Location_Event__c</fullName>
    <label>Location/Event</label>
    <length>144</length>
    <type>Text</type>
</CustomField>