force-app/main/default/objects/Trip_Visit_Report__c/fields/oemInnovationTechnologyComments__c.field-meta.xml
<CustomField>
    <fullName>oemInnovationTechnologyComments__c</fullName>
    <label>OEM Innovation Technology Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>