force-app/main/default/objects/Trip_Visit_Report__c/fields/otherCompetitor__c.field-meta.xml
<CustomField>
    <fullName>otherCompetitor__c</fullName>
    <label>Other Competitor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>