force-app/main/default/objects/Trip_Visit_Report__c/fields/otherDistributionGroup__c.field-meta.xml
<CustomField>
    <fullName>otherDistributionGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Additional Distribution selected by AM</description>
    <inlineHelpText>Additional Distribution selected by AM</inlineHelpText>
    <label>Other Distribution Group</label>
    <referenceTo>DistributionGroup__c</referenceTo>
    <relationshipLabel>Trip/Visit Reports</relationshipLabel>
    <relationshipName>Trip_Visit_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>