force-app/main/default/objects/Trip_Visit_Report__c/fields/otherEmailRecipients__c.field-meta.xml
<CustomField>
    <fullName>otherEmailRecipients__c</fullName>
    <inlineHelpText>Comma-separated list of email addresses.</inlineHelpText>
    <label>Other Email Recipients</label>
    <length>255</length>
    <type>Text</type>
</CustomField>