force-app/main/default/objects/Trip_Visit_Report__c/fields/private__c.field-meta.xml
<CustomField>
    <fullName>private__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Private</label>
    <type>Checkbox</type>
</CustomField>