force-app/main/default/objects/Trip_Visit_Report__c/fields/processImprovements__c.field-meta.xml
<CustomField>
    <fullName>processImprovements__c</fullName>
    <label>Process Improvements</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>