force-app/main/default/objects/Trip_Visit_Report__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Glass</fullName>
            </value>
            <value>
                <fullName>IOXed</fullName>
            </value>
            <value>
                <fullName>Part</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>