force-app/main/default/objects/Trip_Visit_Report__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <label>Purpose</label>
    <length>144</length>
    <type>Text</type>
</CustomField>