force-app/main/default/objects/Trip_Visit_Report__c/fields/Purpose_Objective__c.field-meta.xml
<CustomField>
    <fullName>Purpose_Objective__c</fullName>
    <label>Purpose/Objective</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>