force-app/main/default/objects/Trip_Visit_Report__c/fields/quoteInWhatCurrency__c.field-meta.xml
<CustomField>
    <fullName>quoteInWhatCurrency__c</fullName>
    <label>Quote in what currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>