force-app/main/default/objects/Trip_Visit_Report__c/fields/rebateOfferToOEM__c.field-meta.xml
<CustomField>
    <fullName>rebateOfferToOEM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rebate offer to OEM</label>
    <type>Checkbox</type>
</CustomField>