force-app/main/default/objects/Trip_Visit_Report__c/fields/rebateUsPerSqFt__c.field-meta.xml
<CustomField>
    <fullName>rebateUsPerSqFt__c</fullName>
    <label>Rebate US$ per SqFt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>