force-app/main/default/objects/Trip_Visit_Report__c/fields/sheetSize__c.field-meta.xml
<CustomField>
    <fullName>sheetSize__c</fullName>
    <label>Sheet Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>