force-app/main/default/objects/Trip_Visit_Report__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finisher</fullName>
            </value>
            <value>
                <fullName>ODM</fullName>
            </value>
            <value>
                <fullName>OEM</fullName>
            </value>
            <value>
                <fullName>TPM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>