force-app/main/default/objects/Trip_Visit_Report__c/fields/sourceCompanyName__c.field-meta.xml
<CustomField>
    <fullName>sourceCompanyName__c</fullName>
    <label>Source Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>