force-app/main/default/objects/Trip_Visit_Report__c/fields/sourceDepartmentName__c.field-meta.xml
<CustomField>
    <fullName>sourceDepartmentName__c</fullName>
    <label>Source Department Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>