force-app/main/default/objects/Trip_Visit_Report__c/fields/specificActionToImproveInfoExchange__c.field-meta.xml
<CustomField>
    <fullName>specificActionToImproveInfoExchange__c</fullName>
    <label>Specific Action to Improve Info Exchange</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>