force-app/main/default/objects/Trip_Visit_Report__c/fields/technolgiesDiscussed__c.field-meta.xml
<CustomField>
    <fullName>technolgiesDiscussed__c</fullName>
    <label>Technologies Discussed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0.4mm</fullName>
            </value>
            <value>
                <fullName>3D</fullName>
            </value>
            <value>
                <fullName>Anti-glare</fullName>
            </value>
            <value>
                <fullName>Antimicrobial</fullName>
            </value>
            <value>
                <fullName>Anti-reflective</fullName>
            </value>
            <value>
                <fullName>AO (defense, lithography, spectroscopy)</fullName>
            </value>
            <value>
                <fullName>Automotive applications</fullName>
            </value>
            <value>
                <fullName>Backlight unit (BLU)</fullName>
            </value>
            <value>
                <fullName>Backplane electronics (TFTs, semiconductors,TCOs)</fullName>
            </value>
            <value>
                <fullName>Carrier processes</fullName>
            </value>
            <value>
                <fullName>Coatings and thin films</fullName>
            </value>
            <value>
                <fullName>Color filters</fullName>
            </value>
            <value>
                <fullName>Contego</fullName>
            </value>
            <value>
                <fullName>Corning Laser Technology (CLT)</fullName>
            </value>
            <value>
                <fullName>Durable Anti-Reflective (DAR)</fullName>
            </value>
            <value>
                <fullName>Eagle XG</fullName>
            </value>
            <value>
                <fullName>Flat Glass</fullName>
            </value>
            <value>
                <fullName>Flexible cover glass</fullName>
            </value>
            <value>
                <fullName>Flexible displays</fullName>
            </value>
            <value>
                <fullName>Flexible Glass</fullName>
            </value>
            <value>
                <fullName>Frontlight unit (FLU)</fullName>
            </value>
            <value>
                <fullName>Fullsheet Integrated Touch (FIT)</fullName>
            </value>
            <value>
                <fullName>Glass Ceramics</fullName>
            </value>
            <value>
                <fullName>Glass Other</fullName>
            </value>
            <value>
                <fullName>Gorilla Glass</fullName>
            </value>
            <value>
                <fullName>Handheld (HH)</fullName>
            </value>
            <value>
                <fullName>Head-mounted displays</fullName>
            </value>
            <value>
                <fullName>High-index glass</fullName>
            </value>
            <value>
                <fullName>Information Technology (IT)</fullName>
            </value>
            <value>
                <fullName>Inkjet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>