force-app/main/default/objects/Trip_Visit_Report__c/fields/technologiesDiscussedOther__c.field-meta.xml
<CustomField>
    <fullName>technologiesDiscussedOther__c</fullName>
    <label>Technologies Discussed Other</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>