force-app/main/default/objects/Trip_Visit_Report__c/fields/thickness__c.field-meta.xml
<CustomField>
    <fullName>thickness__c</fullName>
    <label>Thickness</label>
    <length>255</length>
    <type>Text</type>
</CustomField>