force-app/main/default/objects/Trip_Visit_Report__c/fields/topicsDiscussed__c.field-meta.xml
<CustomField>
    <fullName>topicsDiscussed__c</fullName>
    <label>Topics Discussed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Competitive Intelligence</fullName>
            </value>
            <value>
                <fullName>Cross Division</fullName>
            </value>
            <value>
                <fullName>Discussion</fullName>
            </value>
            <value>
                <fullName>Forecasting/Sales</fullName>
            </value>
            <value>
                <fullName>Glass Finishing</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Market Info</fullName>
            </value>
            <value>
                <fullName>New Products</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
            <value>
                <fullName>Other/Can Create Own</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>