force-app/main/default/objects/Trip_Visit_Report__c/fields/topicsDiscussedOther__c.field-meta.xml
<CustomField>
    <fullName>topicsDiscussedOther__c</fullName>
    <label>Topics Discussed Other</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>