force-app/main/default/objects/Trip_Visit_Report__c/fields/tripReportTitle__c.field-meta.xml
<CustomField>
    <fullName>tripReportTitle__c</fullName>
    <label>Trip Report Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>