force-app/main/default/objects/Trip_Visit_Report__c/fields/venue__c.field-meta.xml
<CustomField>
    <fullName>venue__c</fullName>
    <label>Venue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>In-Person</fullName>
            </value>
            <value>
                <fullName>Teleconference</fullName>
            </value>
            <value>
                <fullName>Trade Show</fullName>
            </value>
            <value>
                <fullName>Converence</fullName>
                <isActive>false</isActive>
                <label>Converence</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>