force-app/main/default/objects/Trip_Visit_Report__c/validationRules/Other_Competitor_required_when_OTHER.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Competitor_required_when_OTHER</fullName>
    <active>true</active>
    <description>Other Competitor is required when Competitor is set to Other.</description>
    <errorConditionFormula>ISPICKVAL( competitor__c ,&quot;OTHER&quot;)&amp;&amp;
ISBLANK( otherCompetitor__c )</errorConditionFormula>
    <errorDisplayField>otherCompetitor__c</errorDisplayField>
    <errorMessage>Other Competitor is required when Competitor is set to Other.</errorMessage>
</ValidationRule>