force-app/main/default/objects/Trip_Visit_Report__c/validationRules/Technologies_Discussed_Other.validationRule-meta.xml
<ValidationRule>
    <fullName>Technologies_Discussed_Other</fullName>
    <active>true</active>
    <description>If Technologies Discussed contains &quot;Other/Can Create Own&quot; then Technologies Discussed Other is Required.</description>
    <errorConditionFormula>INCLUDES( technolgiesDiscussed__c , &quot;Other/Can Create Own&quot;) &amp;&amp;
ISBLANK(  technologiesDiscussedOther__c   )</errorConditionFormula>
    <errorDisplayField>technologiesDiscussedOther__c</errorDisplayField>
    <errorMessage>If Technologies Discussed contains &quot;Other/Can Create Own&quot; then Technologies Discussed Other is Required</errorMessage>
</ValidationRule>