force-app/main/default/objects/Trip_Visit_Report__c/validationRules/Topic_Discussed_Other.validationRule-meta.xml
<ValidationRule>
    <fullName>Topic_Discussed_Other</fullName>
    <active>true</active>
    <description>Topic Discussed Other is required if Topic Discussed is set to &quot;Other/Can Create Own&quot;</description>
    <errorConditionFormula>INCLUDES(topicsDiscussed__c, &quot;Other/Can Create Own&quot;) &amp;&amp;
ISBLANK(topicsDiscussedOther__c )</errorConditionFormula>
    <errorDisplayField>topicsDiscussedOther__c</errorDisplayField>
    <errorMessage>Topic Discussed Other is required if Topic Discussed is set to &quot;Other/Can Create Own&quot;</errorMessage>
</ValidationRule>