force-app/main/default/objects/Trip_Visit_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Location__c</columns>
    <columns>Date_of_Meeting__c</columns>
    <columns>Owner__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>businessUnit__c</field>
        <operation>equals</operation>
        <value>GG</value>
    </filters>
    <label>All</label>
</ListView>