force-app/main/default/objects/Trip_Visit_Report__c/listViews/My_Trip_Reports.listView-meta.xml
<ListView>
    <fullName>My_Trip_Reports</fullName>
    <columns>NAME</columns>
    <columns>Location__c</columns>
    <columns>Date_of_Meeting__c</columns>
    <columns>Owner__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Trip Reports</label>
    <language>en_US</language>
</ListView>